March 18, 2009  - tkcon.tcl - rename clear command to tkconclear so it does not
                  interfere with SpecTcl's clear command.
3.2-003
May 1, 2009     - CSpectrum2Dm.{h,cpp}  Ensure these spectra get put in the
                  don't need a parameter list rather than some need a parameter list
                  which causes them to be grossly underincremented.
May 1, 2009     - Complete a raft of editing so that SpecTcl compiles and runs
                  with minimal error messages on debian lenny...really 
		  Debian g++-4.3.2-1.1
May 20, 2009    - Fix sourcing from new gui.. was stripping newlines from multiline
                  definintions (e.g. psuedos). which caused them to fail.
May 27, 2009    - Fix an error in the handling of contours on gamma spectra

3.2-004
August 13, 2009 - Fix error in Strip chart spectrum was not requiring y parameter
                    - Fix error in strip chart shift.  If shift is larger than spectrum
                    channel count would segfault.that target parameter was defined.
September 4, 2009 - Fix BZ 378 - CHistogrammer::createTitle had typos in the reduction
                    of the y parameter list that led to segfaults when g2d spectra 
                    titles were created.
3.2-005
October 14, 2009 - Fix error in strip chart spectrum.  After a slide left, the
                   offset was off by one causing continuous parameters to have a 
                   1-channel hole in their spectra.
3.2-006
December 3, 2009 - Fix error in XMDialogs.cc XMWarningDialog::XMWarningDialog
                   references the buttons prior to ensuring their creation.
December 4, 2009 - BZ 384 provide a list of fallback fonts in case 
                   adobe courier is missing (e.g. Xming without font pack).
                   If no fonts in the list of fonts are available, do a popup
                   error rather than an stderr message before exiting.